<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_view_send_event"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_start_level"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_start_level"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_finish_level"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_finish_level"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_user_login_level"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_user_login_auth"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_user_dashboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="Dashboard"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_restart_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_restart_game"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_p4rc_button_without_dialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_press_p4rc"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_view_for_testing"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_current_state"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_show_current_state"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_logout"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>